--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -8,7 +8,7 @@
   --ion-color-primary-shade: #000000;
   --ion-color-primary-tint: #1a1a1a;
   /** secondary **/
-  --ion-color-secondary: #F5811E;
+  --ion-color-secondary: #f5811e;
   --ion-color-secondary-rgb: 245, 129, 30;
   --ion-color-secondary-contrast: #000000;
   --ion-color-secondary-contrast-rgb: 0, 0, 0;
@@ -64,5 +64,5 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
   /** blue **/
-  --ion-color-blue: #0091EA;
+  --ion-color-blue: #0091ea;
 }
