--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -34,22 +34,56 @@
       Error usuario y/o contraseña inválido
     </span>
   </div>
-  <div class="grandParentContaniner">
-    <form #loginForm="ngForm">
-      <mdc-text-field class="color-text-field" label="Correo" [(ngModel)]="emailInput" #email="ngModel" id="email" name="email"
-        required [outline]="true" [required]="true" [helperText]="weightHelper"></mdc-text-field>
-      <mdc-text-field-helper-text #weightHelper="mdcHelperText" [validation]="true">
-        <span *ngIf="email.dirty || email.touched">Anota correo</span>
-      </mdc-text-field-helper-text>
-      <mdc-text-field class="color-text-field" (keyup)="pressEnter($event)" label="Contraseña" type="password"
-        [(ngModel)]="passInput" #pass="ngModel" id="pass" name="pass" required [outline]="true" [required]="true"
-        [helperText]="weightHelper"></mdc-text-field>
-      <mdc-text-field-helper-text #weightHelper="mdcHelperText" [validation]="true">
-        <span *ngIf="pass.dirty || pass.touched">Anota Contraseña</span>
-      </mdc-text-field-helper-text>
-      <ion-button color="primary" (click)="login()">Ingresar</ion-button>
-      <ion-button round fill="outline" color="secondary" (click)="newUser()">Nuevo Usuario</ion-button>
-    </form>
-    <div class="space-buttons"></div>
-  </div>
+  <ng-container *ngIf="isiOS; then IOS; else notIOS"></ng-container>
+  <!-- Solo iOS -->
+  <ng-template #IOS>
+    <div class="grandParentContaniner">
+      <form #loginForm="ngForm">
+        <ion-item>
+          <ion-label position="floating" color="secondary">Correo</ion-label>
+          <ion-input class="color-text-field" label="Correo" [(ngModel)]="emailInput" #email="ngModel" id="email" name="email"
+            required></ion-input>
+        </ion-item>
+        <ion-item *ngIf="(email.dirty || email.touched) && !email.value" lines="none">
+          <ion-label color="danger">*Anota Correo</ion-label>
+        </ion-item>
+        <!-- Pass -->
+        <ion-item>
+          <ion-label position="floating" color="secondary">Contraseña</ion-label>
+          <ion-input class="color-text-field" (keyup)="pressEnter($event)" label="Contraseña" type="password"
+            [(ngModel)]="passInput" #pass="ngModel" id="pass" name="pass" required></ion-input>
+        </ion-item>
+        <ion-item *ngIf="(pass.dirty || pass.touched) && !pass.value" lines="none">
+          <ion-label color="danger">*Anota Contraseña</ion-label>
+        </ion-item>
+        <div style="margin-bottom: 15%;"></div>
+        <ion-button color="primary" (click)="login()">Ingresar</ion-button>
+        <ion-button round fill="outline" color="secondary" (click)="newUser()">Nuevo Usuario</ion-button>
+      </form>
+      <div class="space-buttons"></div>
+    </div>
+  </ng-template>
+  <!-- Any  -->
+  <ng-template #notIOS>
+    <div class="grandParentContaniner">
+      <form #loginForm="ngForm">
+        <mdc-text-field class="color-text-field" label="Correo" [(ngModel)]="emailInput" #email="ngModel" id="email"
+          name="email" required [outline]="true" [required]="true" [helperText]="weightHelper"></mdc-text-field>
+        <mdc-text-field-helper-text #weightHelper="mdcHelperText" [validation]="true">
+          <span *ngIf="email.dirty || email.touched">Anota correo</span>
+        </mdc-text-field-helper-text>
+        <mdc-text-field class="color-text-field" (keyup)="pressEnter($event)" label="Contraseña" type="password"
+          [(ngModel)]="passInput" #pass="ngModel" id="pass" name="pass" required [outline]="true" [required]="true"
+          [helperText]="weightHelper"></mdc-text-field>
+        <mdc-text-field-helper-text #weightHelper="mdcHelperText" [validation]="true">
+          <span *ngIf="pass.dirty || pass.touched">Anota Contraseña</span>
+        </mdc-text-field-helper-text>
+        <ion-button color="primary" (click)="login()">Ingresar</ion-button>
+        <ion-button round fill="outline" color="secondary" (click)="newUser()">Nuevo Usuario</ion-button>
+      </form>
+      <div class="space-buttons"></div>
+    </div>
+  </ng-template>
+
+
 </ng-template>
