--- a/src/app/components/admin/main-admin/main-admin.component.scss
+++ b/src/app/components/admin/main-admin/main-admin.component.scss
@@ -1,4 +1,15 @@
 //
+.status-point {
+  touch-action: none;
+  user-select: none;
+  -webkit-user-drag: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 2px;
+}
 .filters-conteiner {
   display: flex;
   flex-wrap: wrap;
