--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,5 +1,7 @@
 /** Ionic CSS Variables **/
 :root {
+  /* Set the background of the entire app */
+  // --ion-background-color: #fafafa;
   /** primary **/
   --ion-color-primary: #000000;
   --ion-color-primary-rgb: 0, 0, 0;
