build and change ip

--- a/src/app/components/admin/main-admin/main-admin.component.html
+++ b/src/app/components/admin/main-admin/main-admin.component.html
@@ -33,7 +33,7 @@
         <!-- movementsSegment -->
         <span *ngSwitchCase="'movementsSegment'">
           <!-- titulos -->
-          <h2>Movimientos en el sistema </h2>
+          <h2>Movimientos en el Sistema </h2>
           <p>Se muestra cada acción realizada en el sistema con su estado</p>
           <!-- filtros -->
           <div class="filters-conteiner">
