--- a/src/app/components/oferts/new-edit-ofert/new-edit-ofert.component.scss
+++ b/src/app/components/oferts/new-edit-ofert/new-edit-ofert.component.scss
@@ -1,9 +1,14 @@
 .flex-container {
-    display: flex;
-    flex-direction: column;
-    padding: 5%;
+  display: flex;
+  flex-direction: column;
+  padding: 5%;
 }
 
-.flex-container>* {
-    width: 100%;
+.flex-container > * {
+  width: 100%;
+}
+.cost {
+  display: flex;
+  justify-content: space-around;
+  width: 50% !important;
 }
